# seal_ckks_attack

./: CMakeLists.txt
include/: eval.h  seal_utils.h
src/: eval.cpp  seal_attack.cpp  seal_utils.cpp
